# routes/api/recipes.js
@@ -1,7 +1,7 @@
 const express = require("express");
 const ctrl = require("../../controllers/recipes");
 const { ctrlWrapper } = require("../../helpers");
-const { authenticate } = require("../../middleware");
+const { authenticate, imageUploader } = require("../../middleware");
 const router = express.Router();
 
 router.get('/category-list', authenticate, ctrlWrapper(ctrl.getCategoryList));
@@ -11,5 +11,6 @@ router.get('/id/:id', authenticate, ctrlWrapper(ctrl.getRecipeById));
 router.get('/', authenticate, ctrlWrapper(ctrl.getUserRecipe))
 router.get('/search/recipes', authenticate, ctrlWrapper(ctrl.searchRecipe))
 router.post('/add', authenticate, ctrlWrapper(ctrl.addRecipe))
+router.post('/add/recipeImage', authenticate, imageUploader.single('image'), ctrlWrapper(ctrl.recipeImage))
 router.delete('/remove/:id', authenticate, ctrlWrapper(ctrl.removeRecipe))
 module.exports = router;
