# swagger.json
@@ -601,6 +601,50 @@
                 }
             }
         },
+        "/recipes/add/recipeImage": {
+            "post": {
+                "tags": [
+                    "Recipes"
+                ],
+                "summary": "upload recipe's image",
+                "parameters": [],
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "requestBody": {
+                    "description": "upload body",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UploadRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/addImageResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "missing fields in body"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {}
+                    }
+                }
+            }
+        },
         "/recipes/remove/{id}": {
             "delete": {
                 "tags": [
@@ -1281,6 +1325,11 @@
                         "description": "recipe's name",
                         "example": "bestRecipe"
                     },
+                    "recipeImage": {
+                        "type": "string",
+                        "description": "recipe's image",
+                        "example": "https://res.cloudinary.com/dbcvume5y/image/upload/v1681119616/soyummy/nnrie93qzbbhwzrcd5tu.jpg"
+                    },
                     "description": {
                         "type": "string",
                         "description": "recipe's description",
@@ -1334,6 +1383,15 @@
             "addResponse": {
                 "type": "string",
                 "example": "success"
+            },
+            "addImageResponse": {
+                "type": "object",
+                "properties": {
+                    "response": {
+                        "type": "string",
+                        "example": "https://res.cloudinary.com/dbcvume5y/image/upload/v1681120270/soyummy/fcs5xbxcqnpdnlfxwifr.jpg"
+                    }
+                }
             },
             "searchResponse": {
                 "type": "object",
